Adding support email

--- a/index.html
+++ b/index.html
@@ -623,20 +623,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
     <!-- Footer -->
     <footer id="footer">
+      <h3>For support or suggestions just reach out trough rbrenorios+blitz@gmail.com</h3>
       <ul class="icons">
         <li>
-          <a href="#" class="icon brands fa-linkedin"
+          <a href="https://www.linkedin.com/in/breno-rios-ramos-71a586bb/" class="icon brands fa-linkedin"
             ><span class="label">Linkedin</span></a
           >
         </li>
         <li>
-          <a href="#" class="icon brands fa-github"
+          <a href="https://github.com/rbrenor2" class="icon brands fa-github"
             ><span class="label">Github</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-instagram"
-            ><span class="label">Instagram</span></a
           >
         </li>
       </ul>
